cursive-bootstrap/tests/ui/E-SEM/E-SEM-2536.cursive
// RUN: compile-fail
// DIAG: E-SEM-2536
// SPEC: 5.3
// DESC: Method not found for receiver type

record Point {
    x: i32
    y: i32
}

public procedure main(move ctx: Context) -> i32 {
    let p: Point = Point { x: 1, y: 2 }
    return p ~> nonexistent()  //~ ERROR E-SEM-2536: method not found
}
